--- a/index.html
+++ b/index.html
@@ -12,7 +12,21 @@
     <title>Hello, world!</title>
   </head>
   <body>
+    <nav class="navbar bg-info">Navigation</nav>
     <h1>Hello, world!</h1>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-6 bg-danger">
+          <h1>Column left</h1>
+        
+        </div>
+        <div class="col-6 bg-success">
+          <h1>Column right</h1>
+         
+        </div>
+
+        <footer class="bg-primary">FOOTER</footer>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
