--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-6 bg-danger">
+        <div class="col bg-danger">
           <h1>Column left</h1>
         
         </div>
-        <div class="col-6 bg-success">
+        <div class="col bg-success">
           <h1>Column right</h1>
          
         </div>
 
-        <footer class="bg-primary">FOOTER</footer>
+    <footer class="bg-primary">FOOTER</footer>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
