--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <link href="stylesheet" href="CSS/style.css">
     <title>Hello, world!</title>
   </head>
+
   <body>
     <nav class="navbar bg-info">Navigation</nav>
     <h1>Hello, world!</h1>
 
-    <div class="container">
+  <div>
       <div class="row">
         <div class="col bg-danger">
           <h1>Column left</h1>
