--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
     <nav class="navbar bg-info">Navigation</nav>
     <h1>Hello, world!</h1>
 
+    
+      
+    <div class="jumbotron" style="background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/041.webp');
+    height: 400px;">
+        <h1>Bootstrap Tutorial</h1>
+        <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing
+        responsive, mobile-first projects on the web.</p>
+        <p>This is some text.</p>
+        <p>This is another text.</p>
+    </div>
   
       <div class="row">
         <div class="col bg-danger">
